@@ -171,9 +171,12 @@ class KRslots : public QObject {
     void duplicateTab();
     void newTab(const KUrl& url = KUrl());
     void newTab(KrViewItem *item);
+    void lockTab();
     void closeTab();
     void nextTab();
     void previousTab();
+    void closeInactiveTabs();
+    void closeDuplicatedTabs();
     void slotSplit();
     void slotCombine();
     void userMenu();
