@@ -1,4 +1,4 @@
-<!DOCTYPE kpartgui ><kpartgui version="20" name="krusader" >
+<!DOCTYPE kpartgui ><kpartgui version="21" name="krusader" >
  <MenuBar>
   <Menu name="file" >
    <text>&amp;File</text>
@@ -147,8 +147,11 @@
   <Menu name="window" >
    <text>&amp;Window</text>
    <Action name="new tab" />
+   <Action name="lock tab" />
    <Action name="duplicate tab" />
    <Action name="close tab" />
+   <Action name="close inactive tabs" />
+   <Action name="close duplicated tabs" />
    <Action name="next tab" />
    <Action name="previous tab" />
    <Separator/>
