@@ -1,3 +1,4 @@
+    ADDED: lock tabs, close inactive tabs, close duplicated tabs
     ADDED: better trash integration
 
     FIXED: [ 2609483 ] unpacking to directories with international characters
